# TTR-Backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  entrypoint.sh  index.html
migrations/2024-07-10-135358_users/: up.sql
migrations/2024-07-10-141221_accounts/: up.sql
migrations/2024-07-10-141847_insights/: down.sql  up.sql
migrations/2024-07-11-145429_users/: up.sql
migrations/2024-07-14-181419_followers/: up.sql
migrations/2024-07-15-105820_users/: up.sql
migrations/2024-07-25-055513_insights/: up.sql
migrations/2024-07-25-071120_users/: up.sql
migrations/2024-07-25-151608_colleges/: down.sql  up.sql
migrations/2024-07-25-151753_companies/: up.sql
migrations/2024-07-25-151921_subscription/: down.sql  up.sql
migrations/2024-07-25-181959_companies/: down.sql  up.sql
migrations/2024-07-25-182300_colleges/: up.sql
migrations/2024-07-25-182405_subscription/: up.sql
migrations/2024-08-01-084201_insights/: up.sql
migrations/2024-08-02-141543_users/: up.sql
migrations/2024-08-02-145338_newsletter_sub/: down.sql
migrations/2024-08-11-125425_insights/: up.sql
migrations/2024-08-11-125601_colleges/: up.sql
migrations/2024-09-10-051008_tags/: up.sql
migrations/2024-09-10-051100_newsletter_sub/: up.sql
migrations/2024-09-10-051207_users/: up.sql
migrations/2024-09-10-051244_insights/: down.sql
migrations/2024-09-10-051410_followers/: down.sql
migrations/2024-09-10-051506_likes/: up.sql
src/: config.rs  db.rs  lib.rs  main.rs  rabbitmq.rs  schema.rs
src/handlers/: auth.rs  health.rs  insights.rs  misc.rs  mod.rs  stats.rs  user.rs
src/middlewares/: auth.rs  decrypt.rs  mod.rs
src/models/: account.rs  colleges.rs  companies.rs  followers.rs  insights.rs  likes.rs  mod.rs  subsciption.rs  tag.rs  user.rs
src/models/actions/: mod.rs
src/models/misc/: colleges.rs  mod.rs  newsletter_sub.rs
src/routes/: auth.rs  health.rs  insights.rs  misc.rs  mod.rs  user.rs
src/utils/: mod.rs
