[package]
name = "ttr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "regex"] }
syn = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = "0.9.2"
sha2 = "0.10.6"
base64 = "0.21.0"
hyper = "0.14"

[dependencies.diesel]
version = "2.0.0"
features = ["postgres", "r2d2", "chrono"]
